k8s/todos-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-api
  labels:
    app: todos-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todos-api
  template:
    metadata:
      labels:
        app: todos-api
    spec:
      containers:
        - name: todos-api
          image: YOUR_AZURE_CONTAINER_REGISTRY/todos-api:latest
          ports:
            - containerPort: 8082
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "250m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: todos-api
spec:
  type: ClusterIP
  selector:
    app: todos-api
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
