k8s/traefik-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - 52.138.55.44

      secretName: traefik-tls
  rules:
    - host: 52.138.55.44
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
    - host: 52.138.55.44
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-api
                port:
                  number: 8081
    - host: 52.138.55.44
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todos-api
                port:
                  number: 8082
    - host: 52.138.55.44
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: users-api
                port:
                  number: 8083
